Paginazione offerte completata e corretti errori su paginazione ricerca di numero
