# code/resource-server/src/main/java/com/dietiestates/resource_server/service/OfferService.java
@@ -15,5 +15,8 @@ public interface OfferService {
     Page<OfferResponse> getRealEstateOffers(Long realEstateId, String creatorEmail, String creatorRole, Integer page, Integer size);
     Page<OfferResponse> getRealEstateUserOffers(Long realEstateId, String userEmail, Integer page, Integer size);
     Page<OfferResponse> getRealEstateEstateAgentOffers(Long realEstateId, String estateAgentEmail, Integer page, Integer size);
+    Page<OfferResponse> getOffers(String creatorEmail, String creatorRole, Integer page, Integer size);
+    Page<OfferResponse> getAllUserOffers(String userEmail, Integer page, Integer size);
+    Page<OfferResponse> getAllEstateAgentOffers(String estateAgentEmail, Integer page, Integer size);
     OfferResponse updateOfferStatus(OfferRequest request, Long realEstateId, Long offerId);
 }
